<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/about_us"
                tools:ignore="ContentDescription,HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_b"
                android:gravity="center"
                android:text="5Flavours"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOrange"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="@string/about1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="Reliability and Consistency"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOrange"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="@string/about2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="Unique blend for Top Notch taste"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOrange"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="@string/about3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="Commitment to Food Safety"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOrange"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="@string/about4"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="Price Benefit"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOrange"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="@string/about5"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_l"
                android:gravity="center"
                android:text="Customer Support"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOrange"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_r"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/about_us"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                tools:ignore="ContentDescription,HardcodedText,RtlSymmetry"
                android:paddingLeft="@dimen/_10sdp" />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>