<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="match_parent"
    android:alpha=".9"
    android:background="@color/colorBlack"
    tools:context=".ui.setup.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.104">

        <LinearLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/_5sdp"
                android:inputType="number"
                android:maxLength="12"
                android:fontFamily="@font/ubuntu_r"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:padding="@dimen/_9sdp"
                android:drawableLeft="@drawable/ic_phone"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <View
                android:id="@+id/viewEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:alpha="0.2"
                android:background="@color/colorDivider"
                android:layout_marginLeft="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_unlock"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/ubuntu_r"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:textSize="@dimen/_12sdp"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:drawableLeft="@drawable/ic_unlock" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:alpha="0.2"
                android:background="@color/colorDivider"
                android:layout_marginLeft="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/layoutVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPhone1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/_5sdp"
                android:inputType="number"
                android:maxLength="12"
                android:fontFamily="@font/ubuntu_r"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:padding="@dimen/_9sdp"
                android:textSize="@dimen/_14sdp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:alpha="0.2"
                android:background="@color/colorDivider"
                android:layout_marginLeft="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtOTP"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu_r"
                android:gravity="center"
                android:hint="@string/enter_otp"
                android:textSize="@dimen/_12sdp"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:alpha="0.2"
                android:background="@color/colorDivider"
                android:layout_marginLeft="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_10sdp" />

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.433">

        <Button
            android:id="@+id/login"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/ubuntu_b"
            android:onClick="doLogin"
            android:text="@string/login"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_r"
            android:gravity="center"
            android:onClick="signup"
            android:text="@string/not_a_member_yet_sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/loginWithOtp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_r"
            android:gravity="center"
            android:text="@string/login_with_otp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_b"
            android:gravity="center"
            android:onClick="skip"
            android:id="@+id/skip"
            android:text="Skip>>"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>